Fixed navbar on small screen sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,3 +129,9 @@ hr {
 .copyright h6:hover {
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 550px) {
+    .sm-hidden {
+        display: none;
+    }
+}
